tests/arch/__snapshots__/mips/error/compiler/test_mips_error_compiler_003.s.snap
export const snapshot = {};

snapshot[`mips/error/compiler/test_mips_error_compiler_003.s 1`] = `
{
  column: 8,
  errorText: "[E09] Error: Incorrect instruction syntax",
  line: 12,
}
`;

snapshot[`mips/error/compiler/test_mips_error_compiler_003.s 2`] = `
"[E09] Error: Incorrect instruction syntax
    ╭─[ assembly:12:8 ]
    │
 12 │    add 25, \$t1, 12
    │        ─────┬─────  
    │             ╰─────── Incorrect syntax
    │ 
    │ Note: Allowed formats:
    │       opcode \$rd, \$rt, \$rs
    │       opcode \$rs, \$rt, inm
────╯

The syntax opcode \$rd, \$rt, \$rs failed with the following reason:
Error: found integer (25) but expected \$
    ╭─[ assembly:12:8 ]
    │
 12 │    add 25, \$t1, 12
    │        ─┬  
    │         ╰── Unexpected input
────╯

The syntax opcode \$rs, \$rt, inm failed with the following reason:
Error: found integer (25) but expected \$
    ╭─[ assembly:12:8 ]
    │
 12 │    add 25, \$t1, 12
    │        ─┬  
    │         ╰── Unexpected input
────╯
"
`;

snapshot[`mips/error/compiler/test_mips_error_compiler_003.s 3`] = `
"<span style='color:var(--err-red,#a00)'>[E09] Error:</span> Incorrect instruction syntax
    <span style='color:#949494'>╭─[</span> assembly:12:8 <span style='color:#949494'>]</span>
    <span style='color:#949494'>│</span>
 <span style='color:#949494'>12 │</span> <span style='color:#b2b2b2'>   add </span><span style='color:var(--err-red,#a00)'>25, \$t1, 12</span>
 <span style='color:#585858'>   │</span>        <span style='color:var(--err-red,#a00)'>─────┬─────</span>  
 <span style='color:#585858'>   │</span>             <span style='color:var(--err-red,#a00)'>╰───────</span> Incorrect syntax
 <span style='color:#585858'>   │</span> 
 <span style='color:#585858'>   │</span> <span style='color:#87d7af'>Note</span>: Allowed formats:
 <span style='color:#585858'>   │</span>       opcode \$rd, \$rt, \$rs
 <span style='color:#585858'>   │</span>       opcode \$rs, \$rt, inm
<span style='color:#949494'>────╯</span>

The syntax <span style='color:var(--err-bright-blue,#55f)'>opcode \$rd, \$rt, \$rs</span> failed with the following reason:
<span style='color:var(--err-red,#a00)'>Error:</span> found <span style='color:var(--err-red,#a00)'>integer (25)</span> but expected <span style='color:var(--err-green,#0a0)'>\$</span>
    <span style='color:#949494'>╭─[</span> assembly:12:8 <span style='color:#949494'>]</span>
    <span style='color:#949494'>│</span>
 <span style='color:#949494'>12 │</span> <span style='color:#b2b2b2'>   add </span><span style='color:var(--err-red,#a00)'>25</span><span style='color:#b2b2b2'>, \$t1, 12</span>
 <span style='color:#585858'>   │</span>        <span style='color:var(--err-red,#a00)'>─┬</span>  
 <span style='color:#585858'>   │</span>         <span style='color:var(--err-red,#a00)'>╰──</span> Unexpected input
<span style='color:#949494'>────╯</span>

The syntax <span style='color:var(--err-bright-blue,#55f)'>opcode \$rs, \$rt, inm</span> failed with the following reason:
<span style='color:var(--err-red,#a00)'>Error:</span> found <span style='color:var(--err-red,#a00)'>integer (25)</span> but expected <span style='color:var(--err-green,#0a0)'>\$</span>
    <span style='color:#949494'>╭─[</span> assembly:12:8 <span style='color:#949494'>]</span>
    <span style='color:#949494'>│</span>
 <span style='color:#949494'>12 │</span> <span style='color:#b2b2b2'>   add </span><span style='color:var(--err-red,#a00)'>25</span><span style='color:#b2b2b2'>, \$t1, 12</span>
 <span style='color:#585858'>   │</span>        <span style='color:var(--err-red,#a00)'>─┬</span>  
 <span style='color:#585858'>   │</span>         <span style='color:var(--err-red,#a00)'>╰──</span> Unexpected input
<span style='color:#949494'>────╯</span>
"
`;

snapshot[`mips/error/compiler/test_mips_error_compiler_003.s 4`] = `
"[31m[E09] Error:[0m Incorrect instruction syntax
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m assembly:12:8 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m12 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249ma[0m[38;5;249md[0m[38;5;249md[0m[38;5;249m [0m[31m2[0m[31m5[0m[31m,[0m[31m [0m[31m\$[0m[31mt[0m[31m1[0m[31m,[0m[31m [0m[31m1[0m[31m2[0m
 [38;5;240m   │[0m        [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m   │[0m             [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Incorrect syntax
 [38;5;240m   │[0m 
 [38;5;240m   │[0m [38;5;115mNote[0m: Allowed formats:
 [38;5;240m   │[0m       opcode \$rd, \$rt, \$rs
 [38;5;240m   │[0m       opcode \$rs, \$rt, inm
[38;5;246m────╯[0m

The syntax [94mopcode \$rd, \$rt, \$rs[0m failed with the following reason:
[31mError:[0m found [31minteger (25)[0m but expected [32m\$[0m
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m assembly:12:8 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m12 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249ma[0m[38;5;249md[0m[38;5;249md[0m[38;5;249m [0m[31m2[0m[31m5[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249m\$[0m[38;5;249mt[0m[38;5;249m1[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m2[0m
 [38;5;240m   │[0m        [31m─[0m[31m┬[0m  
 [38;5;240m   │[0m         [31m╰[0m[31m─[0m[31m─[0m Unexpected input
[38;5;246m────╯[0m

The syntax [94mopcode \$rs, \$rt, inm[0m failed with the following reason:
[31mError:[0m found [31minteger (25)[0m but expected [32m\$[0m
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m assembly:12:8 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m12 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249ma[0m[38;5;249md[0m[38;5;249md[0m[38;5;249m [0m[31m2[0m[31m5[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249m\$[0m[38;5;249mt[0m[38;5;249m1[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m2[0m
 [38;5;240m   │[0m        [31m─[0m[31m┬[0m  
 [38;5;240m   │[0m         [31m╰[0m[31m─[0m[31m─[0m Unexpected input
[38;5;246m────╯[0m
"
`;
